Add: partially applied comments

--- a/002_LaTeX/dwuwymiarowe_kopuly_probal.tex
+++ b/002_LaTeX/dwuwymiarowe_kopuly_probal.tex
@@ -61,7 +61,7 @@ Z równań \ref{eq:independence_copula1} i \ref{eq:independence_copula2}, dla pr
 \end{equation}
 
 Równanie \ref{eq:independence_copula} mówi nam, że zmienne losowe $V$ i $U$ są od siebie niezależne. Model kopuły produktowej, implikuje więc niezależność jednostajnych rozkładów brzegowych.\\
-Co więcej, uzupełniając opis kopuł minimum i maksimum - te z kolei odpowiadają współmonotonicznej i przeciwmonotonicznej zależności jednostajnych rozkładów brzegowych. Rodzinę kopuł zawierającą w sobie $C^{-}, C^{\perp}$, oraz $C^{+}$ nazywać będziemy kompletną \emph{(eng. comprehensive)}. Widzimy zatem, że kopuły potrafią modelować pełne spektrum możliwych zależności: od współmonotonicznych, przez niezależne, aż po przeciwmonotoniczne.\\
+Co więcej, uzupełniając opis kopuł minimum i maksimum - te z kolei odpowiadają współmonotonicznej i przeciwmonotonicznej zależności jednostajnych rozkładów brzegowych. Rodzinę kopuł zawierającą w sobie $C^{-}, C^{\perp}$, oraz $C^{+}$ nazywać będziemy kompletną (\emph{comprehensive}). Widzimy zatem, że kopuły potrafią modelować pełne spektrum możliwych zależności: od współmonotonicznych, przez niezależne, aż po przeciwmonotoniczne.\\
 
 \begin{prop}[$\rho$ Spearmana i $\tau$ Kendalla]
 	Dla $X$ i $Y$: ciągłych zmiennych losowych o kopule $C$ możemy przedstawić $\tau$ Kendalla jako:
