--- a/002_LaTeX/model_kopulowy_spreadu.tex
+++ b/002_LaTeX/model_kopulowy_spreadu.tex
@@ -1,7 +1,7 @@
 Dla skupienia uwagi rozważymy model bazujący na rozszerzeniu idei z \cite{Herath_Copula_Crack_Spread}. Używać będziemy procesów ARIMA-GARCH do opisu dynamiki rozkładów brzegowych, po czym zastosujemy kopuły do modelowania zależności w reziduach. Należy zaznaczyć, że jest to algorytm o dużej dowolności ,,podmiany" elementów, który daje się łatwo rozszerzać poprzez uwzględnianie innych procesów brzegowych, czy dynamicznej struktury zależności. Przykłady takich rozszerzeń znaleźć można w \cite{Espen_Crack_Spread_Copula}, \cite{Herath_Copula_Crack_Spread}, \cite{Sukcharoen2017} czy  \cite{Bernard_Pricing_Multivariate_Options_with_copulae}.\\
 
 \subsubsection{Model ARIMA-GARCH Vine Copula}
-Niech $S_1(t), S_2(t), \dots, S_d(t)$ będą cenami $d$ aktywów. Rozważać będziemy proces ich log-zwrotów:
+Niech $S_1(t), S_2(t), \dots, S_d(t)$ będą cenami $d$ aktywów. Rozważać będziemy proces ich logarytmicznych stóp zwrotu:
 
 \begin{equation}
 	r_{i, t+1} = \log[S_i(t+1)] - \log[S_i(t)],
@@ -11,7 +11,7 @@ gdzie $i\in\{1,\dots, d\}$. Niech $\mathcal{F}_t = \sigma(r_{1,s}, \dots, r_{d,s
 
 Celem jest otrzymanie spójnego modelu łącznego dla $(S_1, \dots, S_d)$, pozwalającego na symulację i obliczenie spreadu. Model składać się będzie kilku komponentów: indywidualnych modeli szeregów czasowych dla komponentów spreadu, oraz modelu struktury zależności między nimi. Uściślając: zakładać będziemy, że aktywa poruszają się zgodnie z pewnym procesem klasy ARIMA(p,d,q)-GARCH(m,n), oraz że struktura zależności między reziduami zadana jest poprzez strukturę Vine Copula $\Nu$ względem miary probabilistycznej $\Pra$.\\
 
-Najpierw, w celu uchwycenia struktury zależności czasowej każdego z aktywów osobno, modelujemy \emph{warunkową wartość oczekiwaną} ich logzwrotów poprzez proces ARIMA(p,d,q):
+Najpierw, w celu uchwycenia struktury zależności czasowej każdego z aktywów osobno, modelujemy \emph{warunkową wartość oczekiwaną} ich logarytmicznych stóp zwrotu poprzez proces ARIMA(p,d,q):
 
 \begin{equation}
 	\phi(B)(1-B)^d r_{i, t} = c + \theta(B)\varepsilon_{i, t},
@@ -41,7 +41,7 @@ Mimo wyeliminowania zależności czasowej, rezidua aktywów wciąż jednak posia
 	\label{eq:copula_part}
 \end{equation}
 
-Wobec tego w mierze fizycznej $\Pra$, log-zwroty komponentów spreadu w modelu ARIMA-GARCH copula zadajemy dynamiką:
+Wobec tego w mierze fizycznej $\Pra$, logarytmiczne stopy zwrotu komponentów spreadu w modelu ARIMA-GARCH copula zadajemy dynamiką:
 
 \begin{equation}
 	\begin{cases}
