--- a/002_LaTeX/modele_spreadow.tex
+++ b/002_LaTeX/modele_spreadow.tex
@@ -5,19 +5,17 @@ W tym rozdziale naszkicujemy popularne sposoby modelowania spreadu i wskażemy d
 
 \subsubsection{Modele Blacka-Scholesa oraz Bacheliera}
 
-Najprostszą ideą jest zaadaptowanie dobrze znanego i popularnego modelu Blacka-Scholesa \cite{Black_Scholes} do modelowania komponentów spreadu. Takie podejście zaprezentowane jest w \cite{Bjerksund_Spread_Options_Lognormal}. Dynamika komponentów wyrażana jest tu poprzez stochastyczne równanie różniczkowe:
+Najprostszą ideą jest zaadaptowanie dobrze znanego i popularnego Blacka - Scholesa \cite{Black_Scholes} do modelowania komponentów spreadu. Takie podejście zaprezentowane jest w \cite{Bjerksund_Spread_Options_Lognormal}. Dynamika komponentów wyrażana jest tu poprzez stochastyczne równanie różniczkowe:
 
 $$ dS_i(t) = \mu_i S_i(t)dt + \sigma_i S_i(t)dW_i(t),$$
-
 dla $\mu_i \in \R$, $\sigma_i >0$, gdzie $\{W_1(t)\}_t$ i $\{W_2(t)\}_t$ są dwoma procesami Wienera o korelacji $\rho$.\\
 
-Podejście to powoduje, że ceny aktywów $S_1(t)$ i $S_2(t)$ są nieujemne, o znanym rozkładzie lognormalnym, oraz mamy dostępną dobrze wypracowaną teorię dotyczącą zachowania modelu i wyceny instrumentów pochodnych. Mimo tych zalet model ten nie zyskał jednak popularności w zastosowaniu do spreadów. Powodem jest fakt, że spready mogą być tworzone na podstawie aktywów które mogą osiągać wartości ujemne~-~w momencie pisania tej pracy w wielu europejskich państwach mamy do czynienia z ujemnymi stopami procentowymi, a nie tak dawno obserwować można było ujemną cenę kontraktu futures na ropę WTI. Dodatkowo model ten nie daje jawnych wzorów na ceny instruentów pochodnych na spread. \\
-Zauważono jednak, że w sporej ilości przypadków histogramy spreadu pozwalają się dość dobrze modelować przy pomocy rozkładu normalnego \cite{Carmona_Spread_Options}. Ta obserwacja doprowadziła do zastosowania modelu Bacheliera jako bezpośredniego modelu dla spreadu. Taki pomysł pokazuje \cite{Poitras_Spread_Options_Arithmetic}, stosując model o dynamice:
+Podejście to powoduje, że ceny aktywów $S_1(t)$ i $S_2(t)$ są nieujemne, o znanym rozkładzie lognormalnym, oraz mamy dostępną dobrze wypracowaną teorię dotyczącą zachowania modelu i wyceny instrumentów pochodnych. Mimo tych zalet model ten nie zyskał jednak popularności w zastosowaniu do spreadów. Powodem jest fakt, że spready mogą być tworzone na podstawie aktywów które mogą osiągać wartości ujemne~-~w momencie pisania tej pracy w wielu europejskich państwach mamy do czynienia z ujemnymi stopami procentowymi, a nie tak dawno obserwować można było ujemną cenę kontraktu futures na ropę WTI. Dodatkowo model ten nie daje jawnych wzorów na ceny instrumentów pochodnych na spread. \\
+Jak zauważają \cite{Carmona_Spread_Options}, w sporej ilości przypadków histogramy spreadu pozwalają się jednak dość dobrze modelować przy pomocy rozkładu normalnego. Ta obserwacja doprowadziła do zastosowania modelu Bacheliera jako bezpośredniego modelu dla spreadu. Taki pomysł pokazuje \cite{Poitras_Spread_Options_Arithmetic}, stosując model o dynamice:
 
 $$ ds(t) = \mu s(t) dt + \sigma dW(t),$$
-
-pozwalającej spreadom osiągnąć zarówno dodatnie jak i ujemne wartości. Zaletą takiego podejścia nad modelem lognormalnym jest możliwość otrzymania analitycznych wzorów na europejskie opcje na spread (\cite{Poitras_Spread_Options_Arithmetic}). \cite{Carmona_Spread_Options} w swojej pracy dodatkowo pokazują, że ten model choć prosty, zaskakująco dobrze  dopasowuje się do rynkowych cen europejskich opcji na spark spread - w szczególności dla krótkich terminów wygaśnięcia opcji.\\
-Mimo tych zalet \cite{Herath_Copula_Crack_Spread}, \cite{Carmona_Spread_Options}, czy \cite{Kim_NonNormal_Spread} wyliczają wiele wad tego modelu: brak struktury autokorelacji, ciężkoogonowości, czy brak sposobu na oddanie struktury zależności między komponentami spreadu. W realnych danych na porządku dziennym znaleźć można empiryczne dowody na statystyczną istotność powyższych własności spreadów (\cite{Kim_NonNormal_Spread}, czy \cite{Schwartz_Ornstein}), w związku z czym poszukiwano innych modeli potrafiących rozwiązać te problemy.
+pozwalającej spreadom osiągnąć zarówno dodatnie jak i ujemne wartości. Zaletą takiego podejścia nad modelem lognormalnym jest możliwość otrzymania analitycznych wzorów na europejskie opcje na spread. \cite{Carmona_Spread_Options} w swojej pracy dodatkowo pokazują, że ten model choć prosty, zaskakująco dobrze  dopasowuje się do rynkowych cen europejskich opcji na spark spread - w szczególności dla krótkich terminów wygaśnięcia opcji.\\
+Mimo tych zalet \cite{Herath_Copula_Crack_Spread}, czy \cite{Kim_NonNormal_Spread} wyliczają wiele wad tego modelu: brak struktury autokorelacji, ciężkoogonowości, czy brak sposobu na oddanie struktury zależności między komponentami spreadu. W realnych danych na porządku dziennym znaleźć można empiryczne dowody na statystyczną istotność powyższych własności spreadów (\cite{Kim_NonNormal_Spread}, czy \cite{Schwartz_Ornstein}), w związku z czym poszukiwano innych modeli potrafiących rozwiązać te problemy.
 
 \subsubsection{Model Ornstein'a-Uhlenbecka i szeregi czasowe}
 
