--- a/002_LaTeX/popularne_spready.tex
+++ b/002_LaTeX/popularne_spready.tex
@@ -3,7 +3,7 @@ Poniżej wymienimy różne rodzaje spreadów z wybranych rynków, aby dać czyte
 
 Spreadem nazywać będziemy różnicę pomiędzy cenami dwóch aktywów $S_1$ i $S_2$:
 $$ s(t) = S_1(t) - S_2(t).$$
-Jest to najprostsza wersja spreadu, jaką jest np. \emph{bid-ask} spread, czyli różnica między ceną kupna a sprzedaży aktywa na giełdzie. Definicję tę rozszerzać można jednak do liniowych kombinacji, oraz do większej liczby aktywów - co w praktyce jest nieuniknione (ze względu na różne jednostki komponentów spreadu, lub większą ilość komponentów) więc w pełnej ogólności rozważać będziemy:
+Jest to najprostsza wersja spreadu, jaką jest np. \emph{bid-ask} spread, czyli różnica między ceną kupna a sprzedaży aktywa na giełdzie. Definicję tę rozszerzać można jednak do liniowych kombinacji, oraz do większej liczby aktywów - co w praktyce jest nieuniknione (ze względu na różne jednostki komponentów spreadu lub większą ilość komponentów) więc w pełnej ogólności rozważać będziemy:
 $$ s(t) = \alpha_1S_1(t) - \alpha_2S_2(t) - \cdots -\alpha_nS_n(t).$$
 
 \subsubsection{Rynek instrumentów o stałym dochodzie}
@@ -16,7 +16,7 @@ Inne klasy spreadów na tym rynku to \emph{tenor spreads}, jak różnica między
 
 Przechodząc na inny rynek, zazwyczaj zmieniać się będzie charakter popularnych na nim spreadów. Rynek energii to przede wszystkim \emph{processing spready}, czyli spready wynikające z różnicy ceny zakupu surowca, a ceny sprzedaży wytworzonego produktu, oraz \emph{temporal spready}/\emph{calendar spready} - jak różnice w cenie energii o różnych porach dnia/różnych porach roku.\\
 Na tym rynku, spready pozwalają oszacować koszty produkcji, transportu, przechowania towaru; czyli efektywność linii produkcyjnej. Wśród najpilniej obserwowanych z nich należy wymienić \emph{crack spread}, czyli różnica między ceną ropy naftowej a wyprodukowanych z niej produktów ropopochodnych. Podobnego rodzaju spreadów, o równie istotnym znaczeniu jest jednak dużo więcej - między innymi \emph{dark spread}, \emph{spark spread}, \emph{quark spread} i inne. Każdy odnosi się do różnicy ceny konkretnego surowca (gazu, węgla, uranu i innych) a ceny wyprodukowanej z niego energii.\\
-Wraz ze wzrostem świadomości społeczeństwa na temat zmian klimatycznych, oraz wzrostem regulacji mających na celu zmniejszenie ilości wytwarzanych gazów cieplarnianych, pojawiły się również nowe rodzaje spreadów jak \emph{dark green spread}, \emph{clean dark spread}, czy \emph{clean spark spread}. Są one wariacjami powyższych spreadów energetycznych, z dodatkowym uwzględnieniem trzeciego komponentu, jakim jest konieczność nabycia certyfikatów emisyjnych i służą jako wskaźniki ,,green premium", czyli dodatkowego kosztu środowiskowego (\cite{Carmona_Clean_Spreads}).
+Wraz ze wzrostem świadomości społeczeństwa na temat zmian klimatycznych, oraz wzrostem regulacji mających na celu zmniejszenie ilości wytwarzanych gazów cieplarnianych, pojawiły się również nowe rodzaje spreadów jak \emph{green dark spread}, \emph{clean dark spread}, czy \emph{clean spark spread}. Są one wariacjami powyższych spreadów energetycznych, z dodatkowym uwzględnieniem trzeciego komponentu, jakim jest konieczność nabycia certyfikatów emisyjnych i służą jako wskaźniki ,,green premium", czyli dodatkowego kosztu środowiskowego (\cite{Carmona_Clean_Spreads}).
 
 \subsubsection{Rynek surowców}
 
