--- a/002_LaTeX/spreads_intro.tex
+++ b/002_LaTeX/spreads_intro.tex
@@ -1,4 +1,4 @@
-Według prognoz \cite{PetroleumForecasts} z sierpnia 2022 roku, średnie zapotrzebowanie na paliwa w całym 2022 wyniesie $99.4$ milionów baryłek ropy dziennie. Ta średnia jest o $2.1$ miliona baryłek wyższa niż w roku 2021. Koncerny naftowe przerabiające na dużą skalę ropę na produkty ropopochodne muszą więc obracać gigantyczną ilością towaru, którego cena fluktuuje każdego dnia.
+Według prognoz \cite{PetroleumForecasts} z sierpnia 2022 roku, średnie zapotrzebowanie na paliwa w całym 2022 wyniesie $99.4$ milionów baryłek ropy dziennie. Ta średnia jest o $2.1$ miliona baryłek wyższa niż w roku 2021. Koncerny naftowe przerabiające na dużą skalę ropę na produkty ropopochodne muszą więc obracać gigantycznym wolumenem towaru, którego cena fluktuuje każdego dnia.
 Niezależnie od woli koncernu zmienia się nie tylko cena nabywanej ropy ale i cena sprzedawanego paliwa. Na ich zyski, oprócz długiej listy kosztów operacyjnych wpływa naturalnie różnicą pomiędzy ceną sprzedaży produktu, a ceną zakupu surowca. Różnica ta jest przykładem \emph{processing spreadu}, który jest źródłem ryzyka rynkowego dla producenta dowolnego towaru. Jeśli spread niebezpiecznie się zawęża, producent tracić będzie zyski, a przy pewnej krytycznej wartości zmuszony wręcz będzie wstrzymać produkcję. Uczestnicy rynku świadomi ryzyka, mogą użyć instrumentów pochodnych na spread w celu zagwarantowania ciągłości produkcji nawet w wypadku niekorzystnych warunków rynkowych (\cite{KGHM}). W szczególności na rynku surowców, używanie kontraktów futures czy opcji na spread jest popularną metodą zabezpieczania się przed ryzykiem rynkowym (\cite{spread_hedging}).
 
 W tym rozdziale opiszemy popularne rodzaje spreadów, odwołamy się do popularnych modeli pozwalających wyceniać instrumenty pochodne na spread, oraz w szczególności omówimy model bazujący na dwuwymiarowych kopułach.
