--- a/002_LaTeX/vine_copulas.tex
+++ b/002_LaTeX/vine_copulas.tex
@@ -1,5 +1,5 @@
-Problemy z którymi spotykamy się w praktyce są nierzadko z natury wielowymiarowe. W rozdziale \ref{sec:popularne_spready} opowiemy o clean dark spreadach, czyli mierze rentowności elektrowni węglowej który wymaga modelowania zależności trzech komponentów (ceny węgla, ceny certyfikatów emisyjnych i ceny prądu). Model LDA dla ryzyka operacyjnego nadmieniony w rozdziale \ref{subsec:dwuwymiarowe_kopuly_przyklady} wymaga segmentacji strat względem przynależności do jednej z kilkunastu/kilkudziesięciu homogenicznych kategorii (ORC) i modelowania zależności między nimi. Natomiast modelowanie zależności komponentów portfela inwestycyjnego może okazać się problemem o wymiarowości rzędu setek.\\
-Widzimy więc, że przekrój zastosowań praktycznych jest bardzo duży i istnieje zapotrzebowanie na wielowymiarowe modele zależności. Dwuwymiarowe kopuły przedstawione w \ref{subsec:dwuwymiarowe_kopuly_przyklady} mają często swoje wielowymiarowe odpowiedniki (\cite{Cherubini_Copula_Methods_in_Finance}, \cite{Kurowicka_Dependence_Modeling}). Są one jednak stosunkowo mało elastyczne, ponieważ nie pozwalają ,,dostroić" modelu na poziomie interakcji każdej pary wymiarów zmiennej losowej. W tym rozdziale sięgniemy po modele Vine Copula, które pozwolą bardzo granularnie modelować wielowymiarowe zależności, do stopnia gdzie będziemy w stanie określić zależność między dowolnymi dwoma rozkładami brzegowymi.\\
+Problemy z którymi spotykamy się w praktyce są nierzadko z natury wielowymiarowe. W rozdziale \ref{sec:popularne_spready} opowiemy o clean dark spreadach, czyli mierze rentowności elektrowni węglowej który wymaga modelowania zależności trzech komponentów (ceny węgla, ceny certyfikatów emisyjnych i ceny energii). Model LDA dla ryzyka operacyjnego nadmieniony w rozdziale \ref{subsec:dwuwymiarowe_kopuly_przyklady} wymaga segmentacji strat względem przynależności do jednej z kilkunastu/kilkudziesięciu homogenicznych kategorii (ORC) i modelowania zależności między nimi. Natomiast modelowanie zależności komponentów portfela inwestycyjnego może okazać się nawet kilkusetwymiarowym problemem.\\
+Widzimy więc, że przekrój zastosowań praktycznych jest bardzo duży i istnieje zapotrzebowanie na wielowymiarowe modele zależności. Dwuwymiarowe kopuły przedstawione w \ref{subsec:dwuwymiarowe_kopuly_przyklady} mają często swoje wielowymiarowe odpowiedniki (\cite{Cherubini_Copula_Methods_in_Finance}, \cite{Kurowicka_Dependence_Modeling}). Są one jednak stosunkowo mało elastyczne, ponieważ nie pozwalają ,,dostroić" modelu na poziomie interakcji każdej pary wymiarów zmiennej losowej. W tym rozdziale sięgniemy po modele Vine Copula, które pozwolą modelować wielowymiarowe zależności w dużych detalach, do stopnia gdzie będziemy w stanie określić zależność między dowolnymi dwoma rozkładami brzegowymi.\\
 
 \subsection{Pair Copula Constructions}
 \label{subsec:pair_copula_constructions}
