--- a/002_LaTeX/wstep.tex
+++ b/002_LaTeX/wstep.tex
@@ -1,5 +1,5 @@
 \begin{wstep}[Wprowadzenie]
-	Celem niniejszej pracy jest zbadanie skuteczności modeli \emph{Vine Copula} w zastosowaniu do modelowania spreadu na różnicę cen 3 instrumentów finansowych. Podajemy teorię niezbędną do zdefiniowania tych modeli, omawiamy obecne podejścia do modelowania spreadu i kalibrujemy model \emph{Vine Copula} do danych rzeczywistych dotyczących \emph{soybean crush spreadu}. W tym modelu numerycznie wyceniamy europejskie opcje na spread.\\
+	Celem niniejszej pracy jest zbadanie skuteczności modeli \emph{Vine Copula} w zastosowaniu do modelowania spreadu cen 3 instrumentów finansowych. Podajemy teorię niezbędną do zdefiniowania tych modeli, omawiamy obecne podejścia do modelowania spreadu i kalibrujemy model \emph{Vine Copula} do danych rzeczywistych dotyczących \emph{soybean crush spreadu}. W tym modelu numerycznie wyceniamy europejskie opcje na spread.\\
 	
 	W pierwszym rozdziale wprowadzamy istotne dla teorii kopuł obiekty z zakresu probabilistyki i statystyki. Przedstawiamy wielowymiarowe zmienne losowe, z naciskiem na modele ich rozkładów najczęściej stosowane w praktyce, oraz wskazując na ich istotne ograniczenia. Definiujemy również miary współzależności zmiennych losowych, wychodząc ze statystycznego punktu odniesienia.\\
 	
