--- a/002_LaTeX/dwuwymiarowe_kopuly_przyklady.tex
+++ b/002_LaTeX/dwuwymiarowe_kopuly_przyklady.tex
@@ -11,7 +11,7 @@ Rozdział \ref{subsec:dwuwymiarowe_kopuly_probal} pokazał, że kopuły można i
 
 Widzimy, że równanie \ref{eq:copula_density} jest jedynie przeniesieniem terminu gęstości wielowymiarowego rozkładu na grunt kopuł. Zanim zaczniemy wizualizować gęstości konkretnych kopuł, warto wspomnieć, że Sklar w \cite{Sklar_Theorem} podaje również alternatywną wersję swojego twierdzenia o istnieniu kopuły, tym razem w języku gęstości. Sens i zastosowania twierdzenia pozostają takie same jak dla twierdzenia \ref{thm:sklar_theorem}.
 \begin{thm}[Twierdzenie Sklara: gęstość kopuły]
-	Niech $X$ będzie $d$-wymiarowym wektorem losowym o dystrybuancie rozkładu łącznego $F$, oraz rozkładami brzegowymi $F_i$, $i=1, \dots, d$. Wtedy rozkład łączny może być wyrażony jako		$$F(x_1, \dots, x_d) = C(F_1(x_1), \dots, F_d(x_d)),$$
+	Niech $X$ będzie $d$-wymiarowym wektorem losowym o dystrybuancie rozkładu łącznego $F$, oraz rozkładami brzegowymi $F_i$, $i=1, \dots, d$. Wtedy rozkład łączny może być wyrażony jako		$$F(x_1, \dots, x_d) = C(F_1(x_1), \dots, F_d(x_d))$$
 	lub równoważnie w terminach gęstości poprzez:
 	$$ f(x_1, \dots, x_d) = c(F_1(x_1), \dots, F_d(x_d))\cdot f_1(x_1)\dots f_d(x_d),$$
 	dla pewnej $d$-wymiarowej kopuli $C$, o gęstości $c$. Dla rozkładów bezwzględnie ciągłych, kopuła $C$ jest jednoznacznie określona.\\
@@ -22,13 +22,14 @@ Widzimy, że równanie \ref{eq:copula_density} jest jedynie przeniesieniem termi
 	\label{thm:sklar_theorem_density}
 \end{thm}
 
-Resztę rozdziału stanowić będzie omówienie różnych rodzin kopuł o istotnych zastosowaniach w praktyce. Będziemy prezentować ich gęstości, ponieważ w intuicyjny sposób przedstawiają one mapę osłabień i nasileń współzależności dla konkretnych kopuł. Informatywne w tym względzie są ich wykresy konturowe, przedstawiające poziomice (izohipsy) powierzchni gęstości. Standardowo przedstawia się je w naturalnej \emph{skali kopuły}, tzn. na kwadracie jednostkowym wizualizuje się bezpośrednio gęstość kopuły:
+Resztę rozdziału stanowić będzie omówienie różnych rodzin kopuł o istotnych zastosowaniach w praktyce. Będziemy prezentować ich gęstości, ponieważ w intuicyjny sposób przedstawiają one mapę osłabień i nasileń współzależności dla konkretnych kopuł. Informatywne w tym względzie są ich wykresy konturowe, przedstawiające poziomice powierzchni gęstości. Standardowo przedstawia się je w naturalnej \emph{skali kopuły}, tzn. na kwadracie jednostkowym wizualizuje się bezpośrednio gęstość kopuły:
 $$ c(u, v)\text{, dla } (u, v) \in [0, 1]^2.$$
 Pomocna jest jednak również wizualizacja w \emph{skali brzegowo-znormalizowanej}, czyli po dokonaniu transformacji przez dystrybuantę $\Phi$ i gęstość $\phi$ standardowego rozkładu normalnego:
  $$ g(x, y) = c(\Phi(x), \Phi(y))\phi(x)\phi(y)\textit{, dla }(x,y)\in\R^2.$$
-Powyższa transformacja nie wizualizuje już gęstości kopuły $c$, ale raczej gęstość rozkładu wielowymiarowego $g$, który powstałby gdybyśmy kopułą $C$ połączyli zmienne ze standardowego rozkładu normalnego, zgodnie z twierdzeniem \ref{thm:sklar_theorem}. Ta reprezentacja jest bardzo intuicyjna, ponieważ podstawowe kursy statystyki przyzwyczajają ludzkie oko do utożsamiania silnej/słabej korelacji z wydłużonymi/okrągłymi elipsami tworzonymi przez gęstość wielowymiarowego rozkładu normalnego. Reprezentacja w skali brzegowo-znormalizowanej jest intuicyjna, ponieważ dla kopuły gaussowskiej pokazuje dokładnie te same, znane elipsy. Natomiast w przypadku kopuł innych niż gaussowska, obserwujemy oddalanie się izohips od eliptycznych kształtów, co daje się łatwo zinterpretować w języku odchyleń od struktury zależności wielowymiarowego rozkładu normalnego.
+Powyższa transformacja nie wizualizuje już gęstości kopuły $c$, ale raczej gęstość rozkładu wielowymiarowego $g$, który powstałby gdybyśmy kopułą $C$ połączyli zmienne ze standardowego rozkładu normalnego, zgodnie z twierdzeniem \ref{thm:sklar_theorem}. Ta reprezentacja jest bardzo intuicyjna, ponieważ podstawowe kursy statystyki przyzwyczajają ludzkie oko do utożsamiania silnej/słabej korelacji z wydłużonymi/okrągłymi elipsami tworzonymi przez gęstość wielowymiarowego rozkładu normalnego. Reprezentacja w skali brzegowo-znormalizowanej jest intuicyjna, ponieważ dla kopuły gaussowskiej pokazuje dokładnie te same, znane elipsy. Natomiast w przypadku kopuł innych niż gaussowska, obserwujemy oddalanie się poziomic od eliptycznych kształtów, co daje się łatwo zinterpretować w języku odchyleń od struktury zależności wielowymiarowego rozkładu normalnego.
 
 W praktyce istnieją trzy główne nurty tworzenia kopuł. Można wykorzystać do tego twierdzenie Sklara \ref{thm:sklar_theorem} jako twierdzenie konstrukcyjne, tj. wziąć pewien istniejący, znany rozkład wielowymiarowy, zaaplikować \emph{PIT} (\ref{def:PIT}) do jego rozkładów brzegowych i odzyskać w ten sposób $C$ z twierdzenia Sklara. Drugą metodą konstrukcji kopuł jest zdefiniowanie ich przez tzw. \emph{generator} - powstają w ten sposób kopuły archimedesowe. Trzeci sposób natomiast to rozszerzenie \emph{extreme-value theory} z jedego do wielu wymiarów, co skutkuje powstaniem kopuł typu \emph{extreme-value}.\\
+W kolejnych sekcjach opiszemy te sposoby konstrukcji i przedstawimy najpopularniejszych reprezentantów poszczególnych rodzin.
 
 \subsubsection{Rodzina kopuł eliptycznych}
 
@@ -52,13 +53,12 @@ Kopuły eliptyczne są przykładem konstrukcji kopuł poprzez bezpośrednią apl
 	\caption{\textbf{Kopuła produktowa.} Powierzchnia gęstości (lewy panel), jej kontur w skali kopuły (prawy górny panel) i kontur w skali brzegowo-znormalizowanej (prawy dolny panel). \label{fig:product_copula_density}}
 \end{figure}
 
-Dystrybuantę tej kopuły przedstawiliśmy wcześniej na rysunku \ref{fig:prod_copula}, jednak w tym rozdziale pokazujemy ją w nieco innym świetle. Jednakowa gęstość widoczna na rysunku \ref{fig:product_copula_density} w każdym punkcie kwadratu jednostkowego mówi, że każda para $(u, v) \in [0,1]^2$ ma jednakową szansę na występienie, więc nie ma żadnej zależności między $U$ a $V$. Jest to zgodne z uwagą z rozdziału \ref{subsec:dwuwymiarowe_kopuly_probal}, mówiącą że ta kopuła odpowiada niezależnemu połączeniu zmiennych losowych. Zwróćmy uwagę na prawy dolny panel rysunku \ref{fig:product_copula_density}, który prezentuje izohipsy w skali brzegowo-znormalizowanej. Widzimy koncentryczne okręgi, kojarzące się z wielowymiarowym rozkładem normalnym o korelacji $0$. Istotnie, kopuła produktowa reprezentuje strukturę zależności w tym wielowymiarowym rozkładzie.
+Dystrybuantę tej kopuły przedstawiliśmy wcześniej na rysunku \ref{fig:prod_copula}, jednak w tym rozdziale pokazujemy ją w nieco innym świetle. Jednakowa gęstość widoczna na rysunku \ref{fig:product_copula_density} w każdym punkcie kwadratu jednostkowego mówi, że każda para $(u, v) \in [0,1]^2$ ma jednakową szansę na wystąpienie, więc nie ma żadnej zależności między $U$ a $V$. Jest to zgodne z uwagą z rozdziału \ref{subsec:dwuwymiarowe_kopuly_probal}, mówiącą że ta kopuła odpowiada niezależnemu połączeniu zmiennych losowych. Zwróćmy uwagę na prawy dolny panel rysunku \ref{fig:product_copula_density}, który prezentuje poziomice w skali brzegowo-znormalizowanej. Widzimy koncentryczne okręgi, kojarzące się z wielowymiarowym rozkładem normalnym o korelacji $0$. Istotnie, kopuła produktowa reprezentuje strukturę zależności w tym wielowymiarowym rozkładzie.
 
 \begin{df}[Kopuła gaussowska]
 	Kopuła gaussowska o korelacji $\rho$, to kopuła zadana wzorem:
 	
 	$$ C(u_1, u_2; \rho) = \Phi_2(\Phi^{-1}(u_1), \Phi^{-1}(u_2);\rho),$$
-	
 	gdzie $\Phi$ oraz $\phi$ to odpowiednio dystrybuanta i gęstość standardowego rozkładu normalnego. Gęstość kopuły gaussowskiej zadana jest wzorem:
 	$$ c(u_1, u_2; \rho) = \frac{1}{\phi(x_1)\phi(x_2)} \frac{1}{\sqrt{1-\rho^2}}\exp\bigg[-\frac{\rho^2(x_1^2+x_2^2) - 2\rho x_1 x_2}{2(1-\rho^2)}\bigg],$$
 	gdzie $x_i\coloneqq \Phi^{-1}(u_i)$.
@@ -77,8 +77,8 @@ Dystrybuantę tej kopuły przedstawiliśmy wcześniej na rysunku \ref{fig:prod_c
 
 Kopuła gaussowska modeluje strukturę zależności implikowaną przez wielowymiarowy rozkład normalny, tj. wielowymiarowy rozkład normalny jest równoważny modelowi o normalnych rozkładach brzegowych, połączonych kopułą gaussowską. Rodzina kopuł gaussowskich jest rodziną kompletną. Przykładowa powierzchnia gęstości oraz kontury kopuły gaussowskiej przedstawione są na rysunku \ref{fig:gaussian_copula_density}.
 
-\begin{df}[Kopuła studenta]
-	Kopuła studenta to jednoparametryczna kopuła o $\nu$ stopniach swobody i współczynniku korelacji $\rho$ zadana jest gęstością:
+\begin{df}[Kopuła t-Studenta]
+	Kopuła t-Studenta to jednoparametryczna kopuła o $\nu$ stopniach swobody i współczynniku korelacji $\rho$ zadana jest gęstością:
 	
 	$$ C(u_1, u_2;\nu,\rho) = \frac{t(T_{\nu}^{-1}(v_1), T_{\nu}^{-1}(v_2);\nu,\rho)}{t_{\nu}(T_{\nu}^{-1}(v_1))t_{\nu}(T_{\nu}^{-1}(v_2))}.$$
 \end{df}
@@ -93,9 +93,9 @@ Kopuła gaussowska modeluje strukturę zależności implikowaną przez wielowymi
 	\end{minipage}
 	\caption{\textbf{Kopuła studenta}, $\nu=3, \rho=0.5$: powierzchnia gęstości (lewy panel), jej kontur w skali kopuły (prawy górny panel) i kontur w skali brzegowo-znormalizowanej (prawy dolny panel). \label{fig:student_copula_density}}
 \end{figure}
-Kopuła studenta, podobnie do gaussowskiej, jest implikowana z rozkładu eliptycznego t-Studenta. Oznacza to, że wielowymiarowy rozkład t-Studenta jest równoważny modelowi o rozkładach brzegowych t-Studenta połączonych kopułą studenta. Wraz z rosnącą liczbą stopni swobody kopuła studenta zbiega do gaussowskiej. Ta rodzina nie jest jednak kompletna, ponieważ nawet przy $\rho=0$, dla żadnej skończonej liczby stopni swobody nie zawiera w sobie $C^{\perp}$.\\
+Kopuła t-Studenta, podobnie do gaussowskiej, jest implikowana z rozkładu eliptycznego t-Studenta. Oznacza to, że wielowymiarowy rozkład t-Studenta jest równoważny modelowi o rozkładach brzegowych t-Studenta połączonych kopułą t-Studenta. Wraz z rosnącą liczbą stopni swobody kopuła studenta zbiega do gaussowskiej. Ta rodzina nie jest jednak kompletna, ponieważ nawet przy $\rho=0$, dla żadnej skończonej liczby stopni swobody nie zawiera w sobie $C^{\perp}$.\\
 
-Kopuły eliptyczne cieszą się dużą popularnością w instytucjach finansowych, ponieważ mają swoje naturalne $d$-wymiarowe rozszerzenia. Kopuły uważane są mimo wszystko za skomplikowane modele, i w obliczu szczegółowych regulacji nakładanych na wewnętrzne modele (np. w podejściu AMA do modelowania ryzyka operacyjnego \cite{BaselII}) dużo łatwiej jest uzasadnić i utrzymać w produkcji model bazujący na kilku intuicyjnych parametrach. Z tego powodu, kopuła studenta jest najczęściej wybieraną w praktyce - pozwala bowiem na modelowanie ciężkich ogonów i korelacji, a jednocześnie jest zaledwie dwuparametryczna (\cite{OpRisk}).\\
+Kopuły eliptyczne cieszą się dużą popularnością w instytucjach finansowych, ponieważ mają swoje naturalne $d$-wymiarowe rozszerzenia. Kopuły uważane są mimo wszystko za skomplikowane modele, i w obliczu szczegółowych regulacji nakładanych na wewnętrzne modele (np. w podejściu AMA do modelowania ryzyka operacyjnego \cite{BaselII}) dużo łatwiej jest uzasadnić i utrzymać w produkcji model bazujący na kilku intuicyjnych parametrach. Z tego powodu, kopuła t-Studenta jest najczęściej wybieraną w praktyce - pozwala bowiem na modelowanie ciężkich ogonów i korelacji, a jednocześnie jest zaledwie dwuparametryczna (\cite{OpRisk}).\\
 
 \subsubsection{Rodzina kopuł archimedesowych}
 
@@ -108,7 +108,7 @@ Kopuły eliptyczne cieszą się dużą popularnością w instytucjach finansowyc
 		$$ \phi^{[-1]}(t) \coloneqq \phi^{-1}(t) \1_{\{0\leqslant t \leqslant \phi(0)\}}. $$
 \end{df}
 
-Ta rodzina została wprowadzona została przez Claytona w \cite{Clayton1972} w kontekście modelowania zapadalności na choroby przewlekłe, gdzie posłużyła do opisania zależności w aktuarialnych tabelach średniego dalszego trwania życia. Dziś kopuły archimedesowe wymieniane są pośród najczęściej wykorzystywanych do analizy zależności dwuwymiarowych. W przeciwieńswie do rodziny eliptycznej, kopuły z rodziny archimedesowej potrafią modelować asymetryczne zależności. Oznacza to, że osiągalne są w nich struktury, w których dolne ogony zmiennych losowych są bardziej od siebie zależne niż ogony prawe i \emph{vice versa}. Najprostsze tego zastosowanie to model zwrotów na rynku akcji, które przejawiają silniejszą korelację w lewym ogonie niż w prawym (\cite{AssymetricEquityDependency}). \\
+Ta rodzina została wprowadzona została przez Claytona w \cite{Clayton1972} w kontekście modelowania zapadalności na choroby przewlekłe, gdzie posłużyła do opisania zależności w aktuarialnych tabelach średniego dalszego trwania życia. Dziś kopuły archimedesowe wymieniane są pośród najczęściej wykorzystywanych do analizy zależności dwuwymiarowych. W przeciwieńswie do rodziny eliptycznej, kopuły z rodziny archimedesowej potrafią modelować asymetryczne zależności. Oznacza to, że osiągalne są w nich struktury, w których dolne ogony zmiennych losowych są bardziej od siebie zależne niż ogony prawe i \emph{vice versa}. Najprostsze tego zastosowanie to model stopy zwrotów na rynku akcji, które przejawiają silniejszą korelację w lewym ogonie niż w prawym (\cite{AssymetricEquityDependency}). \\
 Ponadto, kopuły archimedesowe pozwalają wyrazić $\tau$ Kendalla, czy współczynnik zależności ogonów w języku generatora, co powoduje, że są łatwe w estymacji.
 
 \begin{prop}
@@ -178,7 +178,7 @@ Kopuła Claytona pozwala modelować niesymetryczne zależności zmiennych losowy
 	\end{equation}
 \end{prop}
 Kopuła Gumbela również pozwala modelować niesymetryczne zależności zmiennych losowych.  Rysunek \ref{fig:gumbel_copula_density} przedstawia powierzchnię gęstości i kontury w przypadku $\delta = 1.8$, gdzie widzimy powyższą niesymetryczność. Ta rodzina nie jest jednak kompletną, ponieważ mamy jedynie $C(u,v;\delta = 1) = C^{\perp}$, oraz $C(u,v;\delta \to \infty) \to C^{+}$, natomiast kopuła $C^{-}$ nie jest częścią tej rodziny. \\
-Kopuły Gumbela mogą więc posługiwać do modelowania jedynie dodatnich zależności, lub w granicznym przypadku niezależności. Nie przeszkodziło to jednak w skutecznej aplikacji tych kopuł do badań klinicznych, gdzie spopularyzował je Hougaard, w \cite{Hougaard1986} wykorzystując do testowania hipotez o pozytywnym wpływie leku przeciw guzom na długość życia szczurów w grupie leczenia.
+Kopuły Gumbela mogą więc posługiwać do modelowania jedynie dodatnich zależności lub w granicznym przypadku niezależności. Nie przeszkodziło to jednak w skutecznej aplikacji tych kopuł do badań klinicznych, gdzie spopularyzował je Hougaard, w \cite{Hougaard1986} wykorzystując do testowania hipotez o pozytywnym wpływie leku przeciw guzom na długość życia szczurów w grupie leczenia.
 
 \begin{figure}[h]
 	\centering
@@ -226,7 +226,7 @@ Kopuły Gumbela mogą więc posługiwać do modelowania jedynie dodatnich zależ
 \end{figure}
 
 Rodzina kopuł Franka jest rodziną kompletną, bowiem $C(u,v;\delta = 0) = C^{\perp}$, $C(u,v;\delta \to \infty) \to C^{+}$, oraz $C(u,v;\delta \to -\infty) \to C^{-}$ . Kopuła Franka jako jedyna z wymienionych kopuł archimedesowych jest symetryczna. Rysunek \ref{fig:frank_copula_density} przedstawia powierzchnię gęstości i kontury w przypadku $\delta = 5$. \\
-Jedno z ciekawych jej zastosowań, przedstawia \cite{Jianwei2021}. W swojej pracy Jianwei rozważa problem optymalizacji częstości ładowania pojazdów elektrycznych. Kopuła Franka jest przez niego używana do modelowania zależności między siłą wiatru, a ilością energii z ogniw fotowoltaicznych, co wykorzystuje do wyznaczenia optymalnej strategii ładowania pojazdu, która stabilizuje popyt/podaż na energię w sieci energetycznej, skutkując niższymi kosztami utrzymania pojazdu. 
+Jedno z ciekawych jej zastosowań, przedstawia \cite{Jianwei2021}. W swojej pracy Gao rozważa problem optymalizacji częstości ładowania pojazdów elektrycznych. Kopuła Franka jest przez niego używana do modelowania zależności między siłą wiatru, a ilością energii z ogniw fotowoltaicznych, co wykorzystuje do wyznaczenia optymalnej strategii ładowania pojazdu, która stabilizuje popyt/podaż na energię w sieci energetycznej, skutkując niższymi kosztami utrzymania pojazdu. 
 
 \subsubsection{Rodzina kopuł \emph{extreme-value}}
 
@@ -281,7 +281,7 @@ Przykładem kopuły \emph{extreme-value} z podanych już wcześniej jest kopuła
 		\end{split}
 	\end{equation}
 \end{prop}
-Kopuła Marshalla-Olkina jest nietypowa, bo posiada część ciągłą, o powyższej gęstości, jak i część singularną wzdłuz krzywej $u_1^m=u_2^n$. Ta rodzina nie jest kompletna, ponieważ nie zawiera $C^{-}$. Natomiast dla $m=0 \vee n=0$ mamy $C^{\perp}$, a przy $m=1=n$ dostajemy $C^{+}$. Wizualizację kopuli Marshalla-Olkina można zobaczyć na rysunku \ref{fig:marshall_olkin_copula_density}.\\
+Kopuła Marshalla-Olkina jest nietypowa, bo posiada część ciągłą, o powyższej gęstości, jak i część osobliwą wzdłuz krzywej $u_1^m=u_2^n$. Ta rodzina nie jest kompletna, ponieważ nie zawiera $C^{-}$. Natomiast dla $m=0 \vee n=0$ mamy $C^{\perp}$, a przy $m=1=n$ dostajemy $C^{+}$. Wizualizację kopuli Marshalla-Olkina można zobaczyć na rysunku \ref{fig:marshall_olkin_copula_density}.\\
 Kopuły Marshalla-Olkina powstają naturalnie w teorii niezawodności systemów. Rozważając system o wielu komponentach, gdzie awaria dowolnego komponentu powoduje awarię całego systemu, w klasycznym podejściu zakłada się rozkład wykładniczy dla czasu życia każdego z komponentów (z powodu braku pamięci), oraz niezależność między komponentami. W praktyce jednak, czasy do awarii poszczególnych komponentów nie są niezależne. Rozważenie momentu awarii systemu jako moment pierwszej awarii któregoś z jego komponentów prowadzi właśnie do kopuły Marshalla-Olkina \cite{Matus2019}.\\
 
 \begin{figure}[h]
