--- a/002_LaTeX/vine_copula_theory.tex
+++ b/002_LaTeX/vine_copula_theory.tex
@@ -9,7 +9,7 @@ Ideę rozbijania rozkładu na dwuwymiarowe bloki da się rozszerzyć na $d$-wymi
 	\end{equation}
 \end{thm}
 \begin{proof}
-	Zacznijmy od rozważenia rozkładu łącznego i jego ogólnej rekursywnej dekompozycji:
+	Zacznijmy od rozważenia rozkładu łącznego i jego ogólnej rekurencyjnej dekompozycji:
 \begin{equation}
 	\begin{split}
 		f_{1, \dots, d}(x_1, \dots, x_d) &= f_{d|1 , \dots, d-1}(x_d|x_1, \dots, x_{d-1})f_{1,\dots,d-1}(x_1, \dots, x_{d-1})\\
@@ -36,7 +36,7 @@ Aplikując \ref{eq:recursive_pcc} do równania \ref{eq:d-dimensional_decomp}, or
 \end{equation*}
 \end{proof}
 
-Jak widać z równania \ref{eq:d-dimensional_decomp}, dekompozycje te potrafią być zawiłe i mało interpretowalne. Do tego dochodzi fakt, że podobnie jak w przykładzie 3-wymiarowym, nie jest to jedyna postać dekompozycji. Dlatego wprowadzimy teraz fragmenty teorii grafów, która pozwoli nam lepiej komunikować i zrozumieć strukturę PCC.
+Jak widać z równania \ref{eq:d-dimensional_decomp}, dekompozycje te potrafią być złożone i słabo interpretowalne. Do tego dochodzi fakt, że podobnie jak w przykładzie 3-wymiarowym, nie jest to jedyna postać dekompozycji. Dlatego wprowadzimy teraz fragmenty teorii grafów, która pozwoli nam lepiej komunikować i zrozumieć strukturę PCC.
 
 \begin{df}[Graf, wierzchołek, krawędź, stopień]
 	Grafem nazwiemy parę zbiorów $G= (N, E)$, takich że $E \subseteq \{ \{x,y \}: x,y \in N \}$.
@@ -73,7 +73,7 @@ Przykładowe grafy przedstawione sa na rysunku \ref{fig:example_graph}. Nas inte
 Jedynym drzewem widocznym na rysunku \ref{fig:example_graph} jest graf na środkowym panelu. Drzewa są istotne w teorii wielowymiarowych kopuł, ponieważ stanowią podstawowy element budujący \emph{regular vines}, czyli zbiory grafów które posłużą nam do przedstawiania struktury PCC.
 
 \begin{df}[Regular vine]
-	Zbiór drzew $\Nu = (T_1,\dots, T_{d-1})$ nazywamy \emph{regular vine}, lub \emph{R-vine} jeżeli:
+	Zbiór drzew $\Nu = (T_1,\dots, T_{d-1})$ nazywamy \emph{regular vine} lub \emph{R-vine} jeżeli:
 	
 	\begin{enumerate}
 		\item Każde drzewo $T_j=(N_j, E_j)$ jest spójne
@@ -164,7 +164,7 @@ W swojej pracy, Bedford i Cooke pokazują w szczególności, że dowolną trójk
 \end{thm}
 
 Warunki z twierdzenia \ref{def:r_vine_distribution}, nie są znacząco restrykcyjne - jedynym potencjalnie problematycznym założeniem jest tu ciągłość rozkładów brzegowych i odwracalność dystrybuant. W praktyce więc można korzystać z wyniku \ref{thm:existence_of_r_vine} aby związać wielowymiarowy rozkład z reprezentacją R-vine.\\
-Z twierdzenia \ref{thm:existence_of_r_vine} wynika nie tylko istnienie rozkładu R-vine, ale i również to, że dekompozycja używa kopuł związanych ze zbiorami warunkowymi obecnymi na grafie struktury R-vine i \emph{vice versa}. Z każdym wierzchołkiem i krawędzią struktury można więc związać pewien element dekompozycji - dwuwymiarową kopułę lub rozkład brzegowy. Wracając do przykładu z rozdziału \ref{subsub:przyklad_3_wymiary}, gdzie dla 3-wymiarowego rozkładu dostepne były trzy dekompozycje, możemy teraz zwizualizować te możliwości poprzez użycie struktury D-vine. Na rysunku \ref{fig:PCCs} widać, że dekompozycja zalezy jedynie od kolejności wymiarów w drzewie $T_1$.
+Z twierdzenia \ref{thm:existence_of_r_vine} wynika nie tylko istnienie rozkładu R-vine, ale i również to, że dekompozycja używa kopuł związanych ze zbiorami warunkowymi obecnymi na grafie struktury R-vine i \emph{vice versa}. Z każdym wierzchołkiem i krawędzią struktury można więc związać pewien element dekompozycji - dwuwymiarową kopułę lub rozkład brzegowy. Wracając do przykładu z rozdziału \ref{subsub:przyklad_3_wymiary}, gdzie dla 3-wymiarowego rozkładu dostepne były trzy dekompozycje, możemy teraz zwizualizować te możliwości poprzez użycie struktury D-vine. Na rysunku \ref{fig:PCCs} widać, że dekompozycja zależy jedynie od kolejności wymiarów w drzewie $T_1$.
 
 \begin{figure}[h]
 	\centering
